--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
-title:Welcome to benftima first git page
+title: Welcome to benftima first git page
+Description: hy my baby
